[project]
name = "tinboker-agents"
version = "0.1.0"
description = "Unified monorepo for financial content and knowledge infrastructure"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "libs/shared",
    "services/podcast",
    "services/knowledge_graph",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["services/*/tests", "libs/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
